--- a/ansible-playbook/inventory/group_vars/nfs.yml
+++ b/ansible-playbook/inventory/group_vars/nfs.yml
@@ -38,5 +38,8 @@ nfs_exports:
   - path: /srv/kubernetes/
     host: 192.168.178.0/24
     options: rw,sync,all_squash
+    user: nobody
+    group: nobody
+    permissions: "755"
 
 nfs_firewalld_state: skip
