--- a/ansible-playbook/inventory/hosts.yml
+++ b/ansible-playbook/inventory/hosts.yml
@@ -9,7 +9,7 @@ server:
         192.168.178.231:
         192.168.178.232:
         192.168.178.233:
-    podman:
+    container:
       hosts:
         192.168.178.221:
     cockpitmanager:
