--- a/ansible-playbook/play.yml
+++ b/ansible-playbook/play.yml
@@ -60,8 +60,8 @@
       loop: "{{ groups['cockpitmanager'] }}"
       when: inventory_hostname not in groups["cockpitmanager"]
 
-- name: Configure hosts - podman
-  hosts: podman
+- name: Configure hosts - container
+  hosts: container
   roles:
     - role: giftpilz0.server.podman
 
