add new vm dedicated to dns

--- a/ansible-playbook/inventory/hosts.yml
+++ b/ansible-playbook/inventory/hosts.yml
@@ -9,6 +9,9 @@ server:
         192.168.178.231:
         192.168.178.232:
         192.168.178.233:
+    dns:
+      hosts:
+        192.168.178.222:
     container:
       hosts:
         192.168.178.221:
