--- a/ansible-playbook/inventory/group_vars/k3s.yml
+++ b/ansible-playbook/inventory/group_vars/k3s.yml
@@ -37,6 +37,6 @@ firewalld_rules_services:
 k3s_token: changeme
 k3s_version: v1.30.2+k3s1
 k3s_vip_api_endpoint: 192.168.60.234
-k3s_extra_server_args: --tls-san {{ k3s_vip_api_endpoint }} --flannel-backend=none --disable-network-policy --disable traefik --disable servicelb
+k3s_extra_server_args: --tls-san {{ k3s_vip_api_endpoint }} --flannel-backend=none --disable-network-policy --disable traefik --disable servicelb --selinux
 k3s_kube_vip_tag: v0.8.1
 k3s_kube_vip_iface: eth0
