--- a/ansible-playbook/inventory/group_vars/k3s.yml
+++ b/ansible-playbook/inventory/group_vars/k3s.yml
@@ -38,6 +38,9 @@ k3s_extra_server_args: --tls-san {{ k3s_vip_api_endpoint }} --flannel-backend=no
 k3s_kube_vip_tag: v0.8.1
 k3s_kube_vip_iface: eth0
 
+cilium_version: 1.15.7
+
+cilium_config_kubeproxyreplacement: true
 cilium_config_k8sclientratelimit_qps: 30
 cilium_config_k8sclientratelimit_burst: 150
 cilium_config_rolloutciliumpods: true
