--- a/ansible-playbook/inventory/group_vars/server.yml
+++ b/ansible-playbook/inventory/group_vars/server.yml
@@ -38,3 +38,11 @@ packages_rpmfusion_package_state: skip
 
 packages_flatpak_repo_state: skip
 packages_flatpak_package: []
+######################################
+### giftpilz0.general.monitoring
+
+monitoring_agent_tag: 1.3.1
+monitoring_agent_package_state: present
+
+monitoring_agent_config_remoteserver_loki: http://192.168.60.223:3100/loki/api/v1/push
+monitoring_agent_config_remoteserver_prometheus: http://192.168.60.223:9100/api/v1/push
