--- a/ansible-playbook/inventory/hosts.yml
+++ b/ansible-playbook/inventory/hosts.yml
@@ -9,6 +9,9 @@ server:
         192.168.60.231:
         192.168.60.232:
         192.168.60.233:
+    monitoring:
+      hosts:
+        192.168.60.223:
     dns:
       hosts:
         192.168.60.222:
