--- a/ansible-playbook/inventory/group_vars/k3s.yml
+++ b/ansible-playbook/inventory/group_vars/k3s.yml
@@ -3,10 +3,14 @@
 ### giftpilz0.general.firewalld
 
 firewalld_zones_define:
-  - zone: work
-    source: 192.168.10.0/24
-  - zone: cockpit
-    source: 192.168.60.220
+  - zone: server
+    source: 192.168.60.0/24
+  - zone: loadbalancer
+    source: 192.168.50.100
+  - zone: loadbalancer
+    source: 192.168.50.101
+  - zone: loadbalancer
+    source: 192.168.50.102
   - zone: kubernetes
     source: 192.168.60.231
   - zone: kubernetes
@@ -15,17 +19,11 @@ firewalld_zones_define:
     source: 192.168.60.233
 
 firewalld_rules_services:
-  - service: ssh
-    zone: work
-    state: enabled
   - service: cockpit
-    zone: work
-    state: disabled
-  - service: cockpit
-    zone: cockpit
+    zone: loadbalancer
     state: enabled
   - service: ssh
-    zone: cockpit
+    zone: loadbalancer
     state: enabled
 
 ######################################
