--- a/ansible-playbook/inventory/group_vars/nfs.yml
+++ b/ansible-playbook/inventory/group_vars/nfs.yml
@@ -3,37 +3,24 @@
 ### giftpilz0.general.firewalld
 
 firewalld_zones_define:
-  - zone: work
-    source: 192.168.10.0/24
-  - zone: cockpit
-    source: 192.168.60.220
-  - zone: kubernetes
-    source: 192.168.60.231
-  - zone: kubernetes
-    source: 192.168.60.232
-  - zone: kubernetes
-    source: 192.168.60.233
-  - zone: container
-    source: 192.168.60.221
+  - zone: server
+    source: 192.168.60.0/24
+  - zone: loadbalancer
+    source: 192.168.50.100
+  - zone: loadbalancer
+    source: 192.168.50.101
+  - zone: loadbalancer
+    source: 192.168.50.102
 
 firewalld_rules_services:
-  - service: ssh
-    zone: work
-    state: enabled
   - service: cockpit
-    zone: work
-    state: disabled
-  - service: cockpit
-    zone: cockpit
+    zone: loadbalancer
     state: enabled
   - service: ssh
-    zone: cockpit
+    zone: loadbalancer
     state: enabled
   - service: nfs
-    zone: kubernetes
-    state: enabled
-  - service: nfs
-    zone: container
+    zone: server
     state: enabled
 
 ######################################
