--- a/ansible-playbook/inventory/group_vars/k3s.yml
+++ b/ansible-playbook/inventory/group_vars/k3s.yml
@@ -26,17 +26,23 @@ firewalld_rules_services:
     zone: loadbalancer
     state: enabled
 
+firewalld_rules_ports:
+  - port: 6443
+    protocol: tcp
+    zone: kubernetes
+    state: enabled
+
 ######################################
 ### giftpilz0.kubernetes.k3s
 
 k3s_token: changeme
-k3s_version: v1.31.2+k3s1
+k3s_version: v1.32.0+k3s1
 k3s_vip_api_endpoint: 192.168.65.234
 k3s_extra_server_args: --tls-san {{ k3s_vip_api_endpoint }} --flannel-backend=none --disable-network-policy --disable traefik --disable servicelb --selinux
-k3s_kube_vip_tag: v0.8.7
+k3s_kube_vip_tag: v0.8.9
 k3s_kube_vip_iface: eth0
 
-cilium_version: 1.16.4
+cilium_version: 1.16.5
 
 cilium_config_kubeproxyreplacement: true
 cilium_config_k8sclientratelimit_qps: 30
