simplify firewall rules

--- a/ansible-playbook/inventory/group_vars/lb.yml
+++ b/ansible-playbook/inventory/group_vars/lb.yml
@@ -9,8 +9,6 @@ firewalld_zones_define:
     source: 192.168.10.0/24
   - zone: work
     source: 192.168.15.0/24
-  - zone: iot
-    source: 192.168.30.0/24
 
 firewalld_rules_services:
   - service: cockpit
@@ -27,39 +25,7 @@ firewalld_rules_services:
     state: enabled
 
 firewalld_rules_ports:
-  - port: 30013
-    protocol: tcp
-    zone: iot
-    state: enabled
-  - port: 30014
-    protocol: tcp
-    zone: iot
-    state: enabled
-  - port: 30002
-    protocol: tcp
-    zone: work
-    state: enabled
-  - port: 30007
-    protocol: tcp
-    zone: work
-    state: enabled
-  - port: 30024
-    protocol: tcp
-    zone: work
-    state: enabled
-  - port: 30026
-    protocol: tcp
-    zone: work
-    state: enabled
-  - port: 30027
-    protocol: tcp
-    zone: work
-    state: enabled
-  - port: 30031
-    protocol: tcp
-    zone: work
-    state: enabled
-  - port: 30032
+  - port: 30000-30050
     protocol: tcp
     zone: work
     state: enabled
