wip acme (lego) + haproxy

--- a/ansible-playbook/play.yml
+++ b/ansible-playbook/play.yml
@@ -65,6 +65,9 @@
         permanent: true
         state: enabled
         zone: block
+  roles:
+    - role: lego
+    - role: giftpilz0.server.haproxy
 
 - name: Configure hosts - lb (MASTER)
   hosts: lb[0]
