--- a/ansible-playbook/inventory/group_vars/lb.yml
+++ b/ansible-playbook/inventory/group_vars/lb.yml
@@ -46,3 +46,76 @@ keepalived_config_virtual_ip: 192.168.70.100
 keepalived_config_interface: eth0
 keepalived_config_virtual_router_id: 100
 keepalived_config_vrrp_instance: VG
+
+######################################
+### lego
+
+lego_keytype: rsa4096
+lego_cert_path: /etc/ssl/lego
+lego_acme_email: ""
+lego_dns_resolver: 8.8.8.8:53
+lego_acme_provider: ionos
+lego_ionos_api_key: ""
+lego_manager_script_path: /usr/local/bin/manage_lego_certs.sh
+
+lego_acme_domains:
+  - gitea.nixpi.de
+  - files.nixpi.de
+  - uptimekuma.nixpi.de
+  - homeassistant.nixpi.de
+  - vaultwarden.nixpi.de
+
+######################################
+### giftpilz0.server.haproxy
+
+haproxy_config_maxconn: 500
+haproxy_selinux_permissive: true
+
+haproxy_config_http_apps:
+  - name: gitea
+    domain: gitea.nixpi.de
+    force_https: true
+    certificate: "{{ lego_cert_path }}/certificates/gitea.nixpi.de.pem"
+    servers:
+      - name: container
+        host: 192.168.60.221
+        port: 30002
+  - name: pydio
+    domain: files.nixpi.de
+    force_https: true
+    certificate: "{{ lego_cert_path }}/certificates/files.nixpi.de.pem"
+    servers:
+      - name: container
+        host: 192.168.60.221
+        port: 30024
+  - name: vaultwarden
+    domain: vaultwarden.nixpi.de
+    force_https: true
+    certificate: "{{ lego_cert_path }}/certificates/vaultwarden.nixpi.de.pem"
+    servers:
+      - name: container
+        host: 192.168.60.221
+        port: 30032
+  - name: uptimekuma
+    domain: uptimekuma.nixpi.de
+    force_https: true
+    certificate: "{{ lego_cert_path }}/certificates/uptimekuma.nixpi.de.pem"
+    servers:
+      - name: container
+        host: 192.168.60.221
+        port: 30031
+  - name: homeassistant
+    domain: homeassistant.nixpi.de
+    force_https: true
+    certificate: "{{ lego_cert_path }}/certificates/homeassistant.nixpi.de.pem"
+    servers:
+      - name: container
+        host: 192.168.60.221
+        port: 30007
+
+haproxy_config_tcp_apps:
+  - name: tcp-misc
+    port: 30000-30050
+    servers:
+      - name: container
+        host: 192.168.60.221
