--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,15 @@
 ---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v5.0.0
     hooks:
       - id: check-case-conflict
       - id: end-of-file-fixer
       - id: trailing-whitespace
+      - id: check-shebang-scripts-are-executable
 
   - repo: https://github.com/executablebooks/mdformat
-    rev: "0.7.17"
+    rev: "0.7.21"
     hooks:
       - id: mdformat
         additional_dependencies:
@@ -17,11 +18,11 @@ repos:
           - mdformat-footnote
 
   - repo: https://github.com/ansible/ansible-lint
-    rev: v24.2.0
+    rev: v25.1.0
     hooks:
       - id: ansible-lint
 
   - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.88.0
+    rev: v1.97.0
     hooks:
       - id: terraform_fmt
