new ansible implementaion, misc

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -1,5 +1,6 @@
+---
 creation_rules:
-  - path_regex: \.yaml$
+  - path_regex: \.y*ml$
     key_groups:
       - pgp:
           - E610D1262E9505511041BE8A3E5CDE3393570604
