--- a/ansible-playbook/ansible_collections/giftpilz0/homelab/roles/homeassistant/tasks/main.yml
+++ b/ansible-playbook/ansible_collections/giftpilz0/homelab/roles/homeassistant/tasks/main.yml
@@ -58,6 +58,8 @@
     mode: "{{ item.mode }}"
   with_community.general.filetree: "templates/"
   when: item.state == 'file'
+  notify:
+    - "Homeassistant: Restart pod service"
 
 - name: "Homeassistant: systemd daemon reload"
   become: true
