--- a/ansible-playbook/ansible_collections/giftpilz0/homelab/roles/mosquitto/templates/mosquitto/mosquitto.conf
+++ b/ansible-playbook/ansible_collections/giftpilz0/homelab/roles/mosquitto/templates/mosquitto/mosquitto.conf
@@ -1,5 +1,14 @@
+# Settings
+persistence true
+persistence_location /mosquitto/data/
+
+# Authentication
 allow_anonymous false
+password_file /mosquitto/config/passwd
+
+# Listeners
 listener 1883
+protocol mqtt
+
 listener 9001
 protocol websockets
-password_file /mosquitto/config/pwfile
