--- a/ansible-playbook/ansible_collections/giftpilz0/homelab/roles/opencloud/tasks/main.yml
+++ b/ansible-playbook/ansible_collections/giftpilz0/homelab/roles/opencloud/tasks/main.yml
@@ -51,6 +51,8 @@
     mode: "{{ item.mode }}"
   with_community.general.filetree: "templates/"
   when: item.state == 'file'
+  notify:
+    - "OpenCloud: Restart pod service"
 
 - name: "OpenCloud: systemd daemon reload"
   become: true
