fixup! update roles

--- a/ansible-playbook/ansible_collections/giftpilz0/homelab/roles/authentik/defaults/main.yml
+++ b/ansible-playbook/ansible_collections/giftpilz0/homelab/roles/authentik/defaults/main.yml
@@ -59,4 +59,4 @@ authentik_postgresql_environment_vars:
   POSTGRES_PASSWORD: "{{ authentik_db_password }}"
   PGDATA: /var/lib/postgresql/data/pgdata
 
-authentik_cache_environment_vars: []
+authentik_cache_environment_vars: {}
