--- a/ansible-playbook/ansible_collections/giftpilz0/homelab/roles/mosquitto/defaults/main.yml
+++ b/ansible-playbook/ansible_collections/giftpilz0/homelab/roles/mosquitto/defaults/main.yml
@@ -8,7 +8,7 @@ mosquitto_version: "2"
 mosquitto_autoupdate: true
 
 # Environment
-mosquitto_environment_vars: []
+mosquitto_environment_vars: {}
 
 # Config
-mosquitto_pwfile_users: []
+mosquitto_pwfile_users: {}
