--- a/ansible-playbook/inventories/homeassistant/host_vars/192.168.60.10/vars.yml
+++ b/ansible-playbook/inventories/homeassistant/host_vars/192.168.60.10/vars.yml
@@ -103,9 +103,9 @@ traefik_tcp_services:
     acme_enabled: false
     tls_passthrough: false
 
-  - name: mqtt
+  - name: mqtt-tls
     domain: "mqtt.nixpi.de"
-    rule: "HostSNI(`*`)"
+    rule: "HostSNI(`mqtt.nixpi.de`)"
     entrypoints:
       - mqtt-tls
     servers:
