--- a/ansible-playbook/inventories/homeassistant/playbook.yml
+++ b/ansible-playbook/inventories/homeassistant/playbook.yml
@@ -7,6 +7,7 @@
     - role: giftpilz0.general.autoupgrade
     - role: giftpilz0.general.firewalld
     - role: giftpilz0.general.packages
+    - role: giftpilz0.homelab.profile
     - role: giftpilz0.general.timezone
     - role: giftpilz0.server.podman
     - role: giftpilz0.homelab.traefik
