fixup! ansible: run fastfetch on login

--- a/ansible-playbook/ansible_collections/giftpilz0/homelab/roles/profile/tasks/main.yml
+++ b/ansible-playbook/ansible_collections/giftpilz0/homelab/roles/profile/tasks/main.yml
@@ -1,10 +1,12 @@
 ---
 - name: "Profile: Install fastfetch"
+  become: true
   ansible.builtin.package:
     name: fastfetch
     state: present
 
 - name: "Profile: Create systemwide fastfetch config script"
+  become: true
   ansible.builtin.copy:
     dest: /etc/profile.d/fastfetch.sh
     content: |
