ansible: add hostname to k3s

--- a/ansible-playbook/inventories/kubernetes/hosts/hosts.yml
+++ b/ansible-playbook/inventories/kubernetes/hosts/hosts.yml
@@ -3,9 +3,12 @@ server:
   children:
     k3s:
       hosts:
-        192.168.65.10:
-        192.168.65.11:
-        192.168.65.12:
+        k3s-01.nixpi.de:
+          ansible_host: 192.168.65.10
+        k3s-02.nixpi.de:
+          ansible_host: 192.168.65.11
+        k3s-03.nixpi.de:
+          ansible_host: 192.168.65.12
   vars:
     ansible_port: 22
     ansible_user: serveradmin
