--- a/ansible-playbook/inventories/container/host_vars/opencloud.nixpi.de/vars.yml
+++ b/ansible-playbook/inventories/container/host_vars/opencloud.nixpi.de/vars.yml
@@ -44,6 +44,11 @@ traefik_acme_challenge_type: dns
 traefik_acme_dns_provider: "cloudflare"
 traefik_log_level: "WARN"
 
+traefik_transport_timeouts_enabled: true
+traefik_transport_read_timeout: "12h"
+traefik_transport_write_timeout: "12h"
+traefik_transport_idle_timeout: "3m"
+
 # HTTP services
 traefik_http_services:
   - name: opencloud
